--- a/Curriculo/style.css
+++ b/Curriculo/style.css
@@ -6,8 +6,13 @@ body {
   }
   
   .container {
-    max-width: 600px;
-    margin: 0 auto;
+    max-width: 725px;
+
+    /* margin: 0 auto; */
+    margin-top: 25px;
+    margin-left: 450px ;
+    
+  
     background-color: #fff;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 30px;
@@ -94,3 +99,47 @@ body {
       padding: 0;
     }
   }
+
+  section .centralizar{ text-align: center;}
+
+
+.lado-esquerdo {
+  font-family: Arial, sans-serif;
+  color: white;
+  background-color:007bff ;
+  border-radius: 10px;
+  position: absolute;
+  padding: 5px;
+  width: 320px;
+  /* height: 1000; */
+  left: 80px;
+  top: 25px; 
+  margin: 0 auto;
+ margin-top: 25px;
+ margin-bottom: 80px;
+}
+
+img {     
+  width: 200px;
+  border-radius: 800px; 
+  overflow: hidden;
+  padding: 20px;
+  margin-top: 50px; 
+
+}
+
+img:hover {
+  transform: scale(1.1);
+ 
+}
+.referenciar a { text-decoration: none;}
+
+h4 { padding-left: 20px;
+  font-weight: normal;
+  text-decoration: none;
+
+}
+footer{text-align: center;
+  background-color: bisque;
+  margin: 10px 0px 5px 0px;
+}
