--- a/Curriculo/style.css
+++ b/Curriculo/style.css
@@ -142,4 +142,5 @@ h4 { padding-left: 20px;
 footer{text-align: center;
   background-color: bisque;
   margin: 10px 0px 5px 0px;
+  color:purple
 }
