--- a/Curriculo/style.css
+++ b/Curriculo/style.css
@@ -17,6 +17,7 @@ body {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     padding: 30px;
     border-radius: 5px;
+    
   }
   
   h1 {
@@ -102,6 +103,10 @@ body {
 
   section .centralizar{ text-align: center;}
 
+.periodo{
+  font-weight: 600;
+}
+
 
 .lado-esquerdo {
   font-family: Arial, sans-serif;
@@ -117,6 +122,7 @@ body {
   margin: 0 auto;
  margin-top: 25px;
  margin-bottom: 80px;
+ 
 }
 
 img {     
@@ -132,7 +138,9 @@ img:hover {
   transform: scale(1.1);
  
 }
-.referenciar a { text-decoration: none;}
+
+
+.dados-pessoais .referenciar .a {text-decoration: none;}
 
 h4 { padding-left: 20px;
   font-weight: normal;
